--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 trash/
+node_modules/
+gulpfile.js
+jQuerySimpleSlider.sublime-project
+jQuerySimpleSlider.sublime-workspace
+package.json
+demo/dev.html
+src/jquery.easing.1.3.js
+src/jquery.easing.1.3.min.js
+src/jquery.mobile-events.js
+src/jquery.mobile-events.min.js
